feat: implement agent and customer dashboard infrastructure with service layers and frontend API integration